Added admin to update stock-mapping file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,3 +23,16 @@ services:
       - ./logs:/usr/src/app/logs
     env_file:
       - .env
+
+  admin:
+    build: .
+    container_name: local_admin
+    command: ["node", "admin-server.js"]
+    ports:
+      - "3001:3001"
+    volumes:
+      - ./data:/data
+      - ./logs:/usr/src/app/logs
+      - ./public:/usr/src/app/public
+    env_file:
+      - .env
